# 265.MatrixProd

./: .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
R/: RcppExports.R  benchmark.R  compatibility.R  fastMatMul.R  imports.R  matrixProd_functions.R  package.R  performance_info.R  pure_r_matmul.R  stubs.R
examples/: auto_test.R  basic_test.R  benchmark_all_methods.R  pure_r_test.R  simple_test.R
src/: Makevars  accelerate_matmul.cpp  init.c  matmul_impl.cpp  metal_matmul.mm  performance_info.c  rust_matmul.c  rust_stubs.c  simple_matmul.cpp
src/metal/: matrix_multiply.metal
src/rust/: Cargo.toml
src/rust/src/: lib.rs
