[package]
name = "matrixmul"
version = "0.1.0"
edition = "2021"

[lib]
name = "matrixmul"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
rayon = "1.8"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
